Set needsPaintPhaseDescendantBlockBackgrounds if a table has collapsed borders

No matter the actual borders are defined by which descendants and
whether the descedants have self-painting layer, a border-collapsing
table always paint collapsed borders in
PaintPhaseDescendantBlockBackgrounds.

Set needsPaintPhaseDescendantBlockBackgrounds if a table has visible
collapsed borders.

BUG=607022
TEST=PaintLayerPainterTest.TableCollapsedBorderNeedsPaintPhaseDescendantBlockBackgrounds

Review-Url: https://codereview.chromium.org/1925703003
Cr-Commit-Position: refs/heads/master@{#390242}

Former-commit-id: ca106e2693d28e0d045a82077e3a6d8d14c2df43